[package]
name = "j2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
swc = "0.232.42"
clap = { version = "4.0.17", features = ["derive"] }
notify = { version = "5.0.0", features = ["serde"] }
adler = "1.0.2"
scraper = "0.13.0"
futures = "0.3"
lightningcss = "1.0.0-alpha.37"
