[package]
name = "j2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
swc = "0.239.1"
clap = { version = "4.0.32", features = ["derive"] }
notify = { version = "5.0.0", features = ["serde"] }
adler = "1.0.2"
futures = "0.3"
lightningcss = "1.0.0-alpha.39"
serde_json = "1.0.91"
serde = "1.0.152"
hyper = "0.14.23"
ureq = "2.6.1"
