[package]
name = "luanda"
version = "0.2.0"
edition = "2021"
description = "Static web builder"
authors = ["Simao Nziaka"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
swc = "0.245.12"
clap = { version = "4.1.4", features = ["derive"] }
notify = { version = "5.1.0", features = ["serde"] }
adler = "1.0.2"
futures = "0.3"
lightningcss = "1.0.0-alpha.39"
serde_json = "1.0.91"
serde = "1.0.152"
hyper = "0.14.23"
ureq = "2.6.2"
gray_matter = "0.2.5"
markdown = "0.3.0"
